# mybibliotheca

./: .dockerignore  .env.docker.example  .env.example  .gitignore  ADVANCED_MIGRATION_GUIDE.md  AUTOMATIC_MIGRATION_GUIDE.md  BATCH_IMPORT_PROGRESS.md  BOOK_DETAILS_FIELD_ENHANCEMENT_SUMMARY.md  BOOK_DETAILS_LAYOUT.md  CHANGELOG.md  CLEAN_KUZU_SUCCESS.md  COMPREHENSIVE_FIELD_DOCUMENTATION.md  COPYRIGHT_POLICY.md  COROUTINE_FIXES_SUMMARY.md  COVERS_ISSUE_ANALYSIS.md  COVER_DOWNLOAD_FIX_SUMMARY.md  CUSTOM_FIELDS_ARCHITECTURE_REVIEW.md  CUSTOM_FIELD_FIX_SUMMARY.md  DEBUG_SYSTEM_INTEGRATION.md  DOCKER.md  DOCKER_SUMMARY.md  DUPLICATE_BOOKS_FEATURE.md  DUPLICATE_BOOKS_UI_FLOW.md  Dockerfile  FIXES_APPLIED.md  GENRE_MAPPING_IMPLEMENTATION.md  IMPORT_FIXES_SUMMARY.md  IMPORT_METHOD_ANALYSIS.md  IMPORT_TEMPLATES_DEMO.md  ISBN_LOOKUP_FIXES_SUMMARY.md  ISSUES_FIXED_SUMMARY.md  KUZU_ARCHITECTURE_VERIFIED.md  KUZU_FIXES_COMPLETE.md  LICENSE  LOCALPROXY_FIX_SUMMARY.md  LOCATION_SYSTEM_FIX.md  MIGRATION_FIXES_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  (+65 more)
.github/: copilot-instructions.md  copilot-setup-steps.yaml
.github/workflows/: ci.yaml
app/: __init__.py  __init___redis_only.py  __init___sqlite_backup.py  admin.py  advanced_migration_routes.py  advanced_migration_system.py  api_auth.py  auth.py  clean_services.py  debug_routes.py  debug_system.py  forms.py  genre_routes.py  kuzu_integration.py  kuzu_services.py  location_routes.py  location_service.py  metadata_routes.py  migration_detector.py  migration_routes.py  models.py  ocr_scanner.py  onboarding_system.py  rag_config.py  redis_services.py  routes.py  routes_backup.py  routes_sqlite_backup.py  services.py  services_original.py  services_redis_only.py  services_sqlite_backup.py  simplified_book_service.py  simplified_routes.py  sqlite_migration_service.py  template_context.py  utils.py
app/api/: __init__.py  books.py  reading_logs.py  users.py
app/domain/: __init__.py  models.py  repositories.py
app/infrastructure/: __init__.py  clean_service.py  kuzu_clean_repositories.py  kuzu_clean_repositories_new.py  kuzu_graph.py  kuzu_graph_new.py  kuzu_graph_old.py  kuzu_repositories.py  kuzu_repositories_clean.py  redis_graph.py  redis_repositories.py
app/migrations/: quantity_field_migration.py  runner.py  series_relationship_migration.py
app/routes/: __init__.py  api_routes.py  backup_routes.py  book_routes.py  cover_routes.py  genre_routes.py  (+10 more)
backup_redis_files/: redis_graph.py  redis_repositories.py
backups/: backup_index.json
docs/: ADMIN_TOOLS.md  AUTHENTICATION.md  BACKUP_RESTORE.md  BACKUP_RESTORE_NO_RESTART.md  CONFIGURATION.md  DEBUGGING.md  DEPLOYMENT.md  OCR_BARCODE_SCANNER.md  SQLITE_TO_REDIS_MIGRATION.md  stable.md
prompts/: book_extraction.mustache
regression_checks/: api_regressions.py  import_regressions.py  metadata_regressions.py
safe_sync/: run_safe_sync.sh
scripts/: README.md  adjust_cover_logging.py  admin_tools.py  backfill_missing_covers.py  backup_cli.py  create_default_templates.py  detect_migration.py  export_postgres_single_user_to_sqlite.py  install_ocr.bat  install_ocr.sh  migrate_location_system.py  migrate_sqlite_to_redis.py  probe_abs_listening.py  run_postgres_export.sh  setup_data_dir.py  setup_data_directories.py  systemd-backup-config.txt  transfer_books.py  transfer_books_kuzu.py
temp_backup/: backup_metadata.json
test_files/: test_bulk_import_upcs.csv
tests/: test_author_sorting.py  test_library_search.py  test_unified_metadata.py
(+230 files in other folders)
