[project]
name = "bibliotheca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "flask-session>=0.8.0",
    "wtforms>=3.2.1",
    "flask-mail>=0.10.0",
    "werkzeug>=3.1.3",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "pillow>=12.0.0",
    "pytz>=2025.2",
    "email-validator>=2.3.0",
    "flask-compress>=1.23",
    "opencv-python>=4.10.0.84",
    "pyzbar>=0.1.9",
    "pytesseract>=0.3.13",
    "numpy>=1.26.0,<2.0.0",
    "gunicorn>=23.0.0",
    "psutil>=7.1.3",
    "scrypt>=0.9.4",
    "cryptography>=46.0.3",
    "redis>=7.0.1",
    "kuzu>=0.11.3",
    "psycopg[binary]>=3.2.12",
    "pytest>=9.0.1",
    "pytest-flask>=1.3.0",
    "pytest-cov>=7.0.0",
    "pystache>=0.6.8",
]
